Fix mobile layout issues for iphone 6

--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ h2 + .text-block {
 }
 
 footer {
-  height: 450px;
+  height: 670px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -222,9 +222,9 @@ section.theme--light, footer.theme--light {
   max-width: 750px;
   width: 85%;
   margin: 0 auto;
-  transform: translateY(-75vh);
+  transform: translateY(-85vh);
+  padding: 30px;
   border: 4px solid black;
-  padding: 40px;
   background: #ffffffe6;
 }
 
@@ -256,6 +256,11 @@ section.theme--light, footer.theme--light {
 @media screen and (min-width: 650px){
   img {
     width: 450px;
+  }
+
+  .title-card__container-outer {
+    transform: translateY(-75vh);
+    padding: 40px;  
   }
 
   .title-card__container-inner {
